--- a/client/src/containers/WeatherMap/WeatherMap.scss
+++ b/client/src/containers/WeatherMap/WeatherMap.scss
@@ -7,6 +7,6 @@
         background: #141414;
     }
     .RadarTileLayer {
-        transition: opacity 0.5s;
+        //transition: opacity 0.3s;
     }
 }
