Just use someone else's built in weather widget

--- a/client/src/components/ForecastOverlay/ForecastOverlay.scss
+++ b/client/src/components/ForecastOverlay/ForecastOverlay.scss
@@ -1,101 +1,8 @@
 .ForecastOverlay {
-    bottom: 12px;
-    left: bottom;
+    bottom: 0px;
+    width: 100%;
     background: #2b2b2b;
-    border: 1px solid grey;
     position: fixed;
     z-index: 1000;
-    color: white;
-    position: absolute;
-
-    .day-title {
-        border-bottom: 1px solid grey;
-        height: 30px;
-        line-height: 30px;
-    }
-    .forecast-container {
-        height: 100%;
-        position: relative;
-        overflow-y: auto;
-        display: flex;
-        text-align: center;
-    }
-
-    .city-name {
-        font-size: 24px;
-        padding: 5px;
-        font-weight: bold;
-        height: 45px;
-        position: fixed;
-        bottom: 106px;
-        left: 12px;
-    }
-
-
-    .day-block {
-        border-left: 1px solid grey;
-        border-right: 1px solid grey;
-        &:first-of-type {
-            border-left: none;
-        }
-        &:last-of-type {
-            border-right: none;
-        }
-    }
-    .forecast-slot {
-        min-width: 80px;
-        display: flex;
-        flex-flow: column;
-        float: left;
-        padding-top: 5px;
-    }
-
-    .timestamp {
-        display: inline-block;
-    }
-
-    .weather-icon {
-        height: 40px;
-        width: 40px;
-        background-position: center; 
-        background-repeat: no-repeat;
-        background-size: 35px 35px;
-        background-color: #1a8cff;
-        display: inline-block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    // .storm-showers {mask-image: url('../../assets/weather-icons/wi-storm-showers.svg');}
-    // .thunderstorm {mask-image: url('../../assets/weather-icons/wi-showers.svg');}
-    // .sprinkle {mask-image: url('../../assets/weather-icons/wi-sprinkle.svg');}
-    // .rain {mask-image: url('../../assets/weather-icons/wi-rain.svg');}
-    // .rain-mix {mask-image: url('../../assets/weather-icons/wi-rain-mix.svg');}
-    // .showers {mask-image: url('../../assets/weather-icons/wi-showers.svg');}
-    // .snow {mask-image: url('../../assets/weather-icons/wi-snow.svg');}
-    // .sleet {mask-image: url('../../assets/weather-icons/wi-sleet.svg');}
-    // .smoke {mask-image: url('../../assets/weather-icons/wi-smoke.svg');}
-    // .day-haze {mask-image: url('../../assets/weather-icons/wi-day-haze.svg');}
-    // .cloudy-gusts {mask-image: url('../../assets/weather-icons/wi-cloudy-gusts.svg');}
-    // .sunny {mask-image: url('../../assets/weather-icons/wi-day-sunny.svg');}
-    // .cloudy {mask-image: url('../../assets/weather-icons/wi-cloudy.svg');}
-    // .cloudy-gusts {mask-image: url('../../assets/weather-icons/wi-cloudy-gusts.svg');}
-    // .thunderstorm {mask-image: url('../../assets/weather-icons/wi-thunderstorm.svg');}
-
-
-    .storm-showers {mask-image: url('../../assets/weather-icons/wi-storm-showers.svg');}
-    .thunderstorm {mask-image: url('../../assets/weather-icons/wi-showers.svg');}
-    .sprinkle {mask-image: url('../../assets/weather-icons/wi-sprinkle.svg');}
-    .rain {mask-image: url('../../assets/weather-icons/wi-rain.svg');}
-    .rain-mix {mask-image: url('../../assets/weather-icons/wi-rain-mix.svg');}
-    .showers {mask-image: url('../../assets/weather-icons/wi-showers.svg');}
-    .snow {mask-image: url('../../assets/weather-icons/wi-snow.svg');}
-    .sleet {mask-image: url('../../assets/weather-icons/wi-sleet.svg');}
-    .smoke {mask-image: url('../../assets/weather-icons/wi-smoke.svg');}
-    .day-haze {mask-image: url('../../assets/weather-icons/wi-day-haze.svg');}
-    .cloudy-gusts {mask-image: url('../../assets/weather-icons/wi-cloudy-gusts.svg');}
-    .sunny {mask-image: url('../../assets/weather-icons/wi-day-sunny.svg');}
-    .cloudy {mask-image: url('../../assets/weather-icons/wi-cloudy.svg');}
-    .cloudy-gusts {mask-image: url('../../assets/weather-icons/wi-cloudy-gusts.svg');}
-    .thunderstorm {mask-image: url('../../assets/weather-icons/wi-thunderstorm.svg');}
+    position: fixed;
 }
