--- a/client/src/containers/WeatherMap/WeatherMap.scss
+++ b/client/src/containers/WeatherMap/WeatherMap.scss
@@ -1,6 +1,20 @@
 .WeatherMap {
     height: 100vh;
     width: 100vw;
+
+    .map-and-forecast-container {
+        display: flex;
+        flex-flow: column;
+        height: 100vh;
+        width: 100vw;
+    }
+
+    .map-and-radar-container {
+        flex: 1;
+    }
+    .ForecastOverlay {
+        flex: 0;
+    }
     .leaflet-container {
         height: 100%;
         width: 100%;
