--- a/client/src/components/ProgressLayerGroup/ProgressLayerGroup.scss
+++ b/client/src/components/ProgressLayerGroup/ProgressLayerGroup.scss
@@ -2,30 +2,15 @@
   transition: opacity 0.2s;
   pointer-events: none;
 }
-.loading-container {
-  width: 200px;
-  height: 12px;
-  border-radius: 15px;
-  background: transparent;
-  overflow: hidden;
-  position: relative;
-  border: 2px solid rgba(0,0,0,0.2);
-}
 .loading-background {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: white;
-  opacity: 0.2;
+  background: #2b2b2b;
 }
 
 .loading-foreground {
-  width: 100%;
-  height: 100%;
-  position: absolute;
   background: white;
 }
 
 .loading-text {
   color: white;
+  text-align: left;
 }
