--- a/client/src/containers/WeatherMap/WeatherMap.scss
+++ b/client/src/containers/WeatherMap/WeatherMap.scss
@@ -2,6 +2,15 @@
     height: 100vh;
     width: 100vw;
 
+    .leaflet-gac-container {
+        background: white;
+        width: 200px;
+        .leaflet-gac-control {
+            border: none;
+            width: 100%;
+        }
+    }
+
     .map-and-forecast-container {
         display: flex;
         flex-flow: column;
