--- a/client/src/components/ForecastOverlay/ForecastOverlay.scss
+++ b/client/src/components/ForecastOverlay/ForecastOverlay.scss
@@ -1,4 +1,15 @@
 .ForecastOverlay {
     width: 100%;
     background: #2b2b2b;
+    position: relative;
+    .loading-text {
+        color: white;
+        position: absolute;
+        text-align: center;
+        width: 100%;
+        padding: 10px;
+    }
+    a {
+        color: transparent;
+    }
 }
