--- a/client/src/containers/WeatherMap/WeatherMap.scss
+++ b/client/src/containers/WeatherMap/WeatherMap.scss
@@ -12,17 +12,12 @@
     }
 
     .map-and-forecast-container {
-        display: flex;
+        display: grid;
         flex-flow: column;
         height: 100vh;
         width: 100vw;
-    }
-
-    .map-and-radar-container {
-        flex: 1;
-    }
-    .ForecastOverlay {
-        flex: 0;
+        grid-template-columns: 100%;
+        grid-template-rows: auto min-content;
     }
     .leaflet-container {
         height: 100%;
