--- a/client/src/containers/app/app.scss
+++ b/client/src/containers/app/app.scss
@@ -3,3 +3,14 @@ div.global-tooltip.show {
     max-width: 260px;
     opacity: 1;
 }
+
+.leaflet-control-zoom {
+    transition: opacity 0.5s ease-in-out;
+}
+
+.showcasing {
+    .leaflet-control-zoom {
+        opacity: 0;
+        pointer-events: none;
+    }
+}
